set skeleton desing

--- a/src/app/Feature/sync-menu/component/sync-menu.component.html
+++ b/src/app/Feature/sync-menu/component/sync-menu.component.html
@@ -1,59 +1,96 @@
 <div class="datatable">
     @if(!loding){
-        <div class="loading-skeleton">
-            <form>
-              <div class="skeleton-container">
-                <div class="d-flex skeleton-view">
-                  @for (skelton of [].constructor(4); track skelton) {
-                  <div class="form-group" style="min-width:150px">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
+      <div class="container-fluid">
+        <div class="px-4 mt-5">
+              <div class="loading-skeleton">
+                <form>
+                  <div class="skeleton-container">
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
+                    <div class="d-flex skeleton-view">
+                      @for (skelton of [].constructor(4); track skelton) {
+                      <div class="form-group" style="min-width:150px">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
+                      </div>
+                      }
+                    </div>
                   </div>
-                  }
-                </div>
-                <div class="d-flex skeleton-view">
-                  @for (skelton of [].constructor(4); track skelton) {
-                  <div class="form-group" style="min-width:150px">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  }
-                </div>
-                <div class="d-flex skeleton-view">
-                  @for (skelton of [].constructor(4); track skelton) {
-                  <div class="form-group" style="min-width:150px">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  }
-                </div>
-                <div class="d-flex skeleton-view">
-                  @for (skelton of [].constructor(4); track skelton) {
-                  <div class="form-group" style="min-width:150px">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  }
-                </div>
-                <div class="d-flex skeleton-view">
-                  @for (skelton of [].constructor(4); track skelton) {
-                  <div class="form-group" style="min-width:150px">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  }
-                </div>
-                <div class="d-flex skeleton-view">
-                  @for (skelton of [].constructor(4); track skelton) {
-                  <div class="form-group" style="min-width:150px">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
-                  </div>
-                  }
-                </div>
-              </div>
-            </form>
+                </form>
+            </div>
         </div>
+      </div>
+        
     }
     @if(loding){
       <div class="container-fluid">
@@ -108,7 +145,7 @@
                 <tr  mat-row *matRowDef="let row; columns: columns;"></tr>
               </table>
             </div>
-            <mat-paginator [length]="rows.length"  [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+            <mat-paginator [length]="dataSource.data!.length"  [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
           </div>
         </div>
       </div>
