--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,8 +38,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <div><a href="/sync-menu" >Resturent Details</a></div>
-        <div><a href="/dashboard" >Dashbaord</a></div>
+        <div><a href="#/view/sync-menu" >Resturent Details</a></div>
+        <div><a href="#/view/dashboard" >Dashbaord</a></div>
         <div><a href="">LogOut</a></div>
       </div>
     </div>
