--- a/src/app/Feature/menu-sync/menu-sync.component.html
+++ b/src/app/Feature/menu-sync/menu-sync.component.html
@@ -1,17 +1,17 @@
 <!-- header.component.html -->
-<header class="header">
+<!-- <header class="header">
     <div class="logo">A2B</div>
     <div class="search-container">
       <input type="text" [(ngModel)]="searchQuery" placeholder="Search..." (keyup.enter)="onSearch($event)"
         class="search-input" />
       <button (click)="onSearch($event)" class="search-button">Search</button>
     </div>
-  </header>
+  </header> -->
    
   <!-- Data Table -->
    
   <!-- popup for view menu and sync menu -->
-  <div class="modal" [ngClass]="{ 'is-active': modalVisible }">
+  <!-- <div class="modal" [ngClass]="{ 'is-active': modalVisible }">
     <div class="modal-background" (click)="close()"></div>
     <div class="modal-content">
       <div class="box">
@@ -33,4 +33,51 @@
         <button (click)="close()" class="button">Close</button>
       </div>
     </div>
+  </div> -->
+
+
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+  
+      <!-- Progress Column -->
+      <ng-container matColumnDef="progress">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+  
+      <!-- Fruit Column -->
+      <ng-container matColumnDef="fruit">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
+        <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
+  
+  
