--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,7 +1,7 @@
 aside {
   background-color: #00378c;
   margin-top: 0;
-  padding: 10px;
+  padding: 8px !important;
 }
 .menu-icon {
   background-color: #00378c;
