--- a/src/app/Feature/sync-menu/component/sync-menu.component.scss
+++ b/src/app/Feature/sync-menu/component/sync-menu.component.scss
@@ -56,3 +56,9 @@
 .loading-skeleton .form-group input:last-child {
  background-color: #fff;
 }
+
+
+select {
+  padding : 3px 8px;
+  border-radius: 8px;
+}
