--- a/src/app/Feature/sync-menu/component/sync-menu.component.html
+++ b/src/app/Feature/sync-menu/component/sync-menu.component.html
@@ -1,5 +1,5 @@
 <div class="datatable">
-    @if(!loding){
+    @if(!loading){
       <div class="container-fluid">
         <div class="px-4 mt-5">
               <div class="loading-skeleton">
@@ -92,12 +92,12 @@
       </div>
         
     }
-    @if(loding){
+    @if(loading){
       <div class="container-fluid">
         <div class="px-4 mt-5">
           <div class="table">
             <div class="table-scroll">
-              <table mat-table [dataSource]="rows" class="mat-elevation-z8">
+              <table mat-table [dataSource]="rows | paginate: { itemsPerPage: 15, currentPage: page }" class="mat-elevation-z8">
                 <ng-container matColumnDef="Sr No.">
                   <th mat-header-cell *matHeaderCellDef> Sr No. </th>
                   <td mat-cell *matCellDef="let element"> {{element.ShopCode}} </td>
@@ -135,7 +135,7 @@
                 <ng-container matColumnDef="Sync">
                   <th mat-header-cell *matHeaderCellDef> Sync </th>
                   <td mat-cell *matCellDef="let element"> 
-                    <button (click)="openConfirmationPopup(element,constant.confirmation,constant.syncDataMessage,constant.SyncData)" type="button" class="sync-btn" data-bs-toggle="modal" data-bs-target="#globalModel">
+                    <button (click)="openConfirmationPopup(element,constant.confirmation,constant.syncDataMessage)" type="button" class="sync-btn" data-bs-toggle="modal" data-bs-target="#globalModel">
                       Sync
                     </button>
                   </td>
@@ -145,7 +145,24 @@
                 <tr  mat-row *matRowDef="let row; columns: columns;"></tr>
               </table>
             </div>
-            <mat-paginator [length]="dataSource.data!.length"  [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
+            <div class="Footer">
+              <div class="totalCount">
+                  10/100
+              </div>
+              <div class="has-text-centered pagination">
+                <pagination-controls (pageChange)="page = $event"  previousLabel=""
+                nextLabel=""></pagination-controls>
+              </div>
+              <div class="DropDown">
+                <select  [(ngModel)]="dropDownSelectedValue" (change)="onValueChange()">
+                  <option value="5">5</option>
+                  <option value="10">10</option>
+                  <option value="15">15</option>
+                  <option value="20">20</option>
+                  <option value="25">25</option>
+                </select>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -266,12 +283,13 @@
     <!-- } -->
   </div>
 
-
+  <app-loader [isLoading]="lodinSpinner"></app-loader>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
   <div>
-    <app-modle [title]="title" [context]="context" (clickToSure)="clickToSure()"></app-modle>
+    <app-modle #appModle [title]="title" [context]="context" (clickToSure)="clickToSure()"></app-modle>
   </div>
+  
 
