--- a/src/app/Shared/popup/modle/modle.component.html
+++ b/src/app/Shared/popup/modle/modle.component.html
@@ -1,18 +1,20 @@
   
   <!-- Modal -->
-  <div class="modal fade" id="globalModel" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5">{{title}}</h1>
-        </div>
-        <div class="modal-body">
-          {{context}}
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Deny</button>
-          <button type="button" class="btn btn-primary" (click)="clickToSureEmit()"  data-bs-dismiss="modal">Sure</button>
-        </div>
-      </div>
-    </div>
-  </div>
+   <!-- @if(modalVisible){ -->
+     <div class="modal fade" id="globalModel" tabindex="-1" aria-hidden="true">
+       <div class="modal-dialog">
+         <div class="modal-content">
+           <div class="modal-header">
+             <h1 class="modal-title fs-5">{{title}}</h1>
+           </div>
+           <div class="modal-body">
+             {{context}}
+           </div>
+           <div class="modal-footer">
+             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Deny</button>
+             <button type="button" class="btn btn-primary" (click)="clickToSureEmit()"  data-bs-dismiss="modal">Sure</button>
+           </div>
+         </div>
+       </div>
+     </div>
+   <!-- } -->
