--- a/src/styles.scss
+++ b/src/styles.scss
@@ -287,7 +287,6 @@ body {
     padding-top: 17px;
   }
   .DropDown{
-    padding-left: 21px;
-    padding-top: 17px;
+    padding: 16px 20px;
   }
  
