--- a/src/app/Feature/sync-menu/component/sync-menu.component.html
+++ b/src/app/Feature/sync-menu/component/sync-menu.component.html
@@ -177,7 +177,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="cancleMenuModel()"></button>
               </div>
               <div class="modal-body">
-                  <div class="row row-gap-4">
+                  <div class="row row-gap-4 overflow-hidden">
                     @if(!lodinMenuModel){
                       <div class="loading-skeleton">
                           <form>
@@ -260,13 +260,13 @@
                     }
                     @else {
                       @for(singleMenu of listOfMenus; track singleMenu){
-                        <div class="col-12 col-md-6 col-xxl-4">
+                        <div class="col-12 col-md-6 col-xxl-4" id="menu-card">
                             <div class="menu-item-card">
-                                <img src="./assets/images/svg/menu-item-img.png" alt="menu-item-img">
+                                <img [src]="singleMenu?.ItemImage" alt="menu-item-img">
                                 <div class="menu-item-detail">
-                                    <p class="item-name">{{singleMenu?.Iname}}/p>
+                                    <p class="item-name">{{singleMenu?.Iname}}</p>
                                     <p class="item-category">{{singleMenu?.CategoryName}}</p>
-                                    <p class="item-quantity">{{singleMenu?.OptionGroupName}}/p>
+                                    <p class="item-quantity">{{singleMenu?.OptionGroupName}}</p>
                                     <p class="item-price">${{singleMenu?.RateWithoutTax}}</p>
                                 </div>
                             </div>
