--- a/src/app/Feature/sync-menu/component/sync-menu.component.scss
+++ b/src/app/Feature/sync-menu/component/sync-menu.component.scss
@@ -65,27 +65,33 @@ select {
 }
 
 .sr-no-column{
-  max-width: 50px !important;
+  max-width: 100px !important;
+  width:100px !important;
 }
 
 .location-column{
-  max-width: 142px !important;
+  max-width: 250px !important;
+  width: 250px !important;
 }
 
 .city-column{
-  max-width: 96px !important;
+  max-width: 200px !important;
+  width: 200px !important;
 }
 
 .status-column{
-  max-width: 80px !important;
+  max-width: 150px !important;
+  width: 150px !important;
 }
 
 .menu-column{
-  max-width: 53px !important;
+  max-width: 150px !important;
+  width: 150px !important;
 }
 
 .sync-column{
-  max-width: 53px !important;
+  max-width: 150px !important;
+  width: 150px !important;
 }
 
 .restaurant-name-column{
